--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.3.4",
+    "@fawmi/vue-google-maps": "^0.9.79",
+    "vue": "3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
-    "@types/node": "^18.17.0",
+    "@types/node": "^18.17.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
