--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   },
   "dependencies": {
     "@fawmi/vue-google-maps": "0.9.79",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "dayjs": "1.11.9",
     "vue": "3.3.4",
     "vue-router": "4.2.4"
